/home Alterando a imagem e o nome do usuário, retirada da opção perfil e search.

--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -14,6 +14,10 @@
 	background-color: #ff6d20!important;
 }
 
+.user-header {
+	background-color: #222d32!important;
+}
+
 footer {
 	height: 70px;
 	display: flex;
