--- a/resources/assets/sass/tesseract.scss
+++ b/resources/assets/sass/tesseract.scss
@@ -9,6 +9,15 @@
         min-height: 150px;
         border: 5px dashed rgba(255, 129, 0, 0.69);
         text-align: center;
+        
     }
+    .dz-error-mark {
+        display: none;
+    }
+    .dz-success-mark {
+        display: none;
+    }
+
+
 }
 
