--- a/resources/assets/sass/tesseract.scss
+++ b/resources/assets/sass/tesseract.scss
@@ -4,11 +4,25 @@
     width: 80%;
 
     .dropzone {
+        cursor: pointer;
         background: #cdcdcd;
-
         min-height: 150px;
         border: 5px dashed rgba(255, 129, 0, 0.69);
         text-align: center;
+        
+        &.dz-started {
+            h2, i {
+                display: none;
+            }
+        }
+
+        &.dz-drag-hover {
+            background: rgba(205,205,205,0.6);
+        }
+
+        &:hover {
+            background: rgba(205,205,205,0.6);
+        }
         
     }
     .dz-error-mark {
