--- a/resources/assets/sass/tesseract.scss
+++ b/resources/assets/sass/tesseract.scss
@@ -56,8 +56,8 @@ ul#listagem-medias-slider-exp {
     text-align: center;
     
     li.media-item {
+        height: 180px;
         margin-bottom: 1rem;
-        min-height: 100px;
         .img-media-slider, .video-media-slider {
             max-width:100%;
             max-height:120px;
