ajuste sign out

--- a/resources/assets/sass/tesseract.scss
+++ b/resources/assets/sass/tesseract.scss
@@ -89,3 +89,11 @@ div#datatable-tesseract {
         height: auto;
     }
 }
+
+
+
+/** ADMINLTE OVERRIDE **/
+.navbar-nav>.user-menu>.dropdown-menu>li.user-header {
+    height: 190px;
+}
+
